# ooc_svo_builder

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  manual.html
.github/workflows/: build_cmake.yml  cmake.yml
linux/: build_svo_builder.sh  build_tri_convert.sh
manual/: manual.html
msvc/: ooc_svo_builder.sln  ooc_svo_builder_custom_includes.props  svo_builder.vcxproj  svo_builder.vcxproj.filters  tri_convert.vcxproj  tri_convert.vcxproj.filters  tri_tools.vcxproj  tri_tools.vcxproj.filters  tri_tools_include.props  trimesh_include.props
msvc/vs2015/: ooc_svo_builder_custom_includes.props  svo_builder.vcxproj  svo_builder.vcxproj.filters  svo_builder_custom_includes.props  tri_convert.vcxproj  tri_convert.vcxproj.filters  tri_convert_custom_includes.props
msvc/vs2017/: svo_builder.vcxproj  svo_builder.vcxproj.filters  tri_convert.vcxproj
msvc/vs2019/: svo_builder.vcxproj  svo_builder_custom_includes.props  tri_convert.vcxproj  tri_convert_custom_includes.props
msvc/vs2022/: ooc_svo_builder.sln  svo_builder.vcxproj  svo_builder_custom_includes.props  tri_convert.vcxproj  tri_convert.vcxproj.filters
src/: todo.txt
src/libs/libmorton/include/: morton.h  morton2D.h  morton2D_32.h  morton2D_64.h  morton2D_LUTs.h  morton3D.h  morton3D_32.h  morton3D_64.h  morton3D_LUTs.h  morton3D_lookup_tables.h  morton_AVX512BITALG.h  morton_BMI.h  morton_LUT_generators.h  morton_common.h
src/libs/libtri/include/: TriReader.h  file_tools.h  tri_tools.h  tri_util.h  trip_tools.h
src/ooc_svo_builder/: ooc_svo_builder.sln
src/ooc_svo_builder/svo_builder/: Buffer.cpp  Buffer.h  DataPoint.h  Node.h  OctreeBuilder.cpp  OctreeBuilder.h  VoxelData.h  build_linux.sh  build_svo_builder.sh  geometry_primitives.h  globals.h  intersection.h  main.cpp  morton.h  octree_io.h  partitioner.cpp  partitioner.h  svo_builder.vcxproj  svo_builder.vcxproj.filters  svo_builder_util.h  util.h  voxelizer.cpp  voxelizer.h
src/ooc_svo_builder/tri_convert/: build_tri_convert.sh  tri_convert.cpp  tri_convert.vcxproj  tri_convert.vcxproj.filters  tri_convert_util.h  util.h
src/ooc_svo_builder/tri_tools/: tri_tools.vcxproj  tri_tools.vcxproj.filters
src/ooc_svo_builder/tri_tools/include/: TriReader.h  file_tools.h  tri_tools.h  tri_util.h  trip_tools.h
src/svo_builder/: BBoxBuffer.h  BarycentricCoords.h  Buffer.h  Node.h  OctreeBuilder.cpp  OctreeBuilder.h  VoxelData.h  build_svo_builder.sh  geometry_primitives.h  globals.h  intersection.h  main.cpp  morton.h  octree_io.h  partitioner.cpp  partitioner.h  svo_builder_util.h  timer.h  voxelizer.cpp  voxelizer.h
src/tri_convert/: build_tri_convert.sh  timer.h  tri_convert.cpp  tri_convert_util.h
src/tri_tools/include/: file_tools.h  tri_tools.h
